--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, deleniti reiciendis? Sed praesentium, dolorum labore quidem qui quos hic fugiat consequuntur, repudiandae mollitia laudantium autem tenetur eos provident fugit quae.</p>
         </article>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat qui totam necessitatibus vero aliquid cumque maiores. Sequi blanditiis deleniti unde, deserunt labore, laudantium minima possimus, ad veritatis vero modi!</p>
         </article>
     </main>
 </body>
