--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, deleniti reiciendis? Sed praesentium, dolorum labore quidem qui quos hic fugiat consequuntur, repudiandae mollitia laudantium autem tenetur eos provident fugit quae.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat qui totam necessitatibus vero aliquid cumque maiores. Sequi blanditiis deleniti unde, deserunt labore, laudantium minima possimus, ad veritatis vero modi!</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
